# gardemarin

./: .gitignore  README.md
docs/encloser/: encloser_v1.scad  encloser_v1_bottom.scad  encloser_v1_btn.scad  encloser_v1_common.scad  encloser_v1_top.scad  screen.stl
examples/app_os_simple/: 1  make_app_os_simple  makefile  makefile.bat
examples/app_os_simple/src/: ManagementClass.cpp  ManagementClass.h  app_hooks.c  app_tasks.h  fwmain.cpp  main.c  main.cpp  task1ms.cpp  task1sec.cpp  task500ms.c  task500ms.cpp  task500ms.h  taskEpoch.cpp
examples/app_os_simple/src/system/: app_fwkernel.cpp  app_fwkernel.h  app_handlers.c  app_handlers.h
examples/boot/: CMakeLists.txt  README.md  make_boot  makefile  makefile.bat
examples/boot/src/: fwmain.c  main.c
examples/boot/src/system/: app_handlers.c  app_handlers.h
examples/canmonitor/: README.md  make_canmonitor  makefile  makefile.bat
examples/canmonitor/src/: ManagementClass.cpp  ManagementClass.h  app_tasks.h  fwmain.cpp  taskEpoch.cpp
examples/canmonitor/src/system/: app_fwkernel.cpp  app_fwkernel.h  app_handlers.cpp  app_handlers.h
examples/common/drivers/: adc_drv.cpp  adc_drv.h  btn_usr.c  btn_usr.h  can_drv.c  can_drv.cpp  can_drv.h  can_injector.cpp  can_injector.h  dbc.cpp  dbc.h  display_spi.cpp  display_spi.h  display_spi_f10x.cpp  display_spi_f10x.h  display_spi_f4xx.cpp  display_spi_f4xx.h  display_st7789.cpp  display_st7789.h  display_st7789_font.h  ds18b20_drv.cpp  ds18b20_drv.h  fwkernel.cpp  fwkernel.h  fwkernelgen.cpp  fwkernelgen.h  gpio_drv.c  gpio_drv.h  hbridge.cpp  hbridge.h  hbridge_current.cpp  hbridge_current.h  hbridge_dcmotor.cpp  hbridge_dcmotor.h  leddrv.c  leddrv.h  ledstrip.c  ledstrip.cpp  ledstrip.h  loadsensor.c  (+22 more)
examples/common/fw/: FwAttribute.cpp  FwAttribute.h  fwapi.cpp  fwapi.h  fwattribute.cpp  fwattribute.h  fwfifo.cpp  fwfifo.h  fwkernel.cpp  fwkernel.h  fwlist.h  fwmem.c  fwobject.cpp  fwobject.h
examples/common/include/: AdcInterface.h  BinInterface.h  CanInterface.h  CommonInterface.h  DisplayInterface.h  IrqInterface.h  KernelInterface.h  KeyInterface.h  PwmInterface.h  RawInterface.h  RunInterface.h  SensorInterface.h  TimerInterface.h  can.h  canframe.h  gardemarin.h  prjtypes.h  scb.h  scs.h  stm32f4xx_map.h  usart.h
examples/common/include/devs/: adc.h  afio.h  can.h  dma.h  exti.h  flash.h  gpio.h  i2c.h  mcu.h  nvic.h  pwr.h  rcc.h  rtc.h  scs.h  spi.h  stm32f103c8t6_map.h  stm32f4xx_map.h  syscfg.h  tim.h
examples/common/system/: gcc_newlib.c  gcc_startup.c  isr_vector.c  memanager.c  memanager.h  stm32f10x.ld  stm32f10x_isr_vector.c  stm32f4xx.ld  system_handlers.c  system_handlers.h  system_init.c  system_init_f103x.c  uart.c  uart.h  vprintfmt.c  vprintfmt.h
examples/freertos/: FreeRTOSConfig.h
examples/qleika/: armgcc.cmake  make_qleika  makefile  makefile.bat
examples/qleika/src/: fwmain.c  fwmain.cpp  gpio_cfg.h  task.c  task.h
examples/qleika/src/system/: air_d9.c  air_d9.h  app_fwkernel.cpp  app_fwkernel.h  app_handlers.h  bkp.c  bkp.h  dht22.c  dht22.h  display_spi_f10x.cpp  display_spi_f10x.h  exti_btn.c  exti_btn.h  gpio_drv.cpp  gpio_drv.h  i2c_bmp280.c  i2c_bmp280.h  i2c_common.c  i2c_common.h  i2c_veml7700.c  i2c_veml7700.h  pwm.c  pwm.h  rtc_qleika.c  rtc_qleika.h  spi_display.c  spi_display.h
examples/sim/: CMakeLists.txt  main.cpp
examples/sim/libfw/: CMakeLists.txt
examples/sim/libfw/freertos/: port.c  portmacro.h
examples/sim/libst32sim/: CMakeLists.txt
examples/sim/libst32sim/src/: access_S32K148.h  s32k148api.cpp  s32k148api.h  s32k148regs.h  sim_api.cpp  sim_api.h
examples/sim/libst32sim/src/device/: adcsim.cpp  adcsim.h  cansim.cpp  cansim.h  extisim.cpp  extisim.h  gpiosim.cpp  gpiosim.h  lpitsim.cpp  lpitsim.h  nvicsim.cpp  nvicsim.h  pccsim.cpp  pccsim.h  portsim.cpp  portsim.h  rccsim.cpp  rccsim.h  rtcsim.cpp  rtcsim.h  s32k148sim.cpp  s32k148sim.h  scbsim.cpp  scbsim.h  scgsim.cpp  scgsim.h  spisim.cpp  spisim.h  stm32f4xx_sim.cpp  stm32f4xx_sim.h  syscfgsim.cpp  syscfgsim.h  systicksim.cpp  systicksim.h  timsim.cpp  timsim.h  uartsim.cpp  uartsim.h  wdogsim.cpp  wdogsim.h
examples/sim/libst32sim/src/generic/: devgen.cpp  devgen.h  memopgen.cpp  memopgen.h  reggen.cpp  reggen.h
examples/sim/libst32sim/src/include/: isimface.h
examples/sim/simcommon/: async_fifo.h  can_common.h  shm_common.h  simutils.cpp  simutils.h
openocd/: run_openocd.bat  stm32f1xx-boot.cfg  stm32f4-gardemarin.cfg  stm32f4-proc.cfg  stm32f4-target.cfg  stm32h7-toucan.cfg
qtmonitor/: CMakeLists.txt  gardemarin.json  qtdeploy.bat
qtmonitor/src/: comsettings.cpp  comsettings.h  console.cpp  console.h  ctrlpanel.cpp  ctrlpanel.h  main.cpp  mainwindow.cpp  mainwindow.h  pwmslider.cpp  pwmslider.h  serial.cpp  serial.h  tab_calc.cpp  tab_calc.h  tab_camera.cpp  tab_camera.h  tab_camera_metadata.cpp  tab_camera_metadata.h  tab_lights.cpp  tab_lights.h  tab_npk.cpp  tab_npk.h  tab_scales.cpp  tab_scales.h  tab_test.cpp  tab_test.h  tab_tmpr.cpp  tab_tmpr.h  tab_usrset.cpp  tab_usrset.h  tabwindow.cpp  tabwindow.h
qtmonitor/src/chart/: PlotWidget.cpp  PlotWidget.h  linecommon.cpp  linecommon.h
qtmonitor/src/common/: attribute.cpp  attribute.h  autobuffer.cpp  iattr.h
qtmonitor/src/dlg/: dlgimagesettings.cpp  dlgimagesettings.h  dlgserialsettings.cpp  dlgserialsettings.h  dlgvideosettings.cpp  dlgvideosettings.h
